- Optimized shared folder listing by caching the shares

03-05-2013 4.1.61
- Project folders were moving to an invalid folder location
- Added filter bar for groups in Email composer address book
- MoreData tag wasn't handled by Syncml server which caused problems with Funambol
  Outlook sync when syncing lots of data.
- Wrong display of reminder time
- Use utf-8 charset for searching in IMAP
- IMAP and LDAP authentication did not log validation errors
- Added pagination to the Addresslist filter and remove limit from addresslist management panel
- Reverted saving order statuses to old json.php the OrderStatusController is not finished
- E-mail expunges mailbox when loading messages
- License error when ticket page is used on different domain with CMS

01-05-2013 4.1.60
- IE7 Didn't load anymore
- Force SSL didn't work anymore
- Hide treeselect slave option
- Updated Croatian translation
- Moving in billing catalog didn't refresh grid
- Markup field in billing dialog showed NaN and did incorrect calculations with some regional settings
- Added YYYY-MM-DD date format to settings dialog

26-04-2013 4.1.59
- Can't set property error when replying to e-mails with inline images

25-04-2013 4.1.58
- Calendar bug with organizer status and custom fields requirement
- Deformed thumbnail bug
- Duplicate holidays bug
- Broken counts in addressbook (ACL table was joined when not necessary)

24-04-2013 4.1.57
- Problem with custom fields settings tab.

23-04-2013 4.1.56
- Added birthdays and holidays to merged calendar views in the calendar (If enabled in the calendars).
- Calendar color chooser: Fixed IE fix for color picker left margin
- Fixed internalUrls in emails in linked email window
- MultiSelectGrid can have extra valid value that might not exist in the database
- MultiSelectGrid is capable of have a store prefix (when selectable store changes)
- Fixed color selection when multiple calendars are viewed in the calendargrid